@@ -1,3 +1,8 @@
+next
+    Docs
+    * Updated close parend problem to include quotes and a workaround
+      [rt.cpan.org 85925]
+
 20130505    May  5 21:17:45 PDT 2013
     Promoted to full release
 
